2004-11-24  Murray Cumming  <murrayc@localhost.localdomain>

	* demos/gtk-demo/: Added missing demo-common.[h|cc] files.
	* gtk/src/treeview.hg, gdk/src/pixbuf.hg, : Removed extra ; and 
	unused parameter to fix build for g++ 3.4.

2004-11-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/dialog.[hg|ccg]: Added set_alternative_button_order().
	* gtk/src/button.[hg|ccg]: Added set/get_image() and property.

2004-11-17  Murray Cumming  <murrayc@murayc.com>

	* gtk/src/iconinfo.[hg|ccg]: Added operator bool(), needed to check 
	the result of IconTheme::lookup_icon(). Bug #143018.

2004-11-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Mention Gtk::manage() in the Basics/
	Widgets section, with a link to the Memory Management chapter, so that 
	people have an explanation of manage() before it is used in examples. 
	Bug #138248.

2004-11-16 Claudio Saavedra <csaavedra@alumnos.utalca.cl>

	* docs/tutorial/gtkmm-tut.xml: Fixed two typos in Chapter 19 and
	Appendix A.
	* examples/book/helloworld/helloworld.cc: Fixed wrong reference
	to a inexistent method in a comment.

2.5.1:

2004-11-11  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooser.hg: Wrap GTK_FILE_CHOOSER_ERROR as exception. 
	Still need to investigate whether GTK_FILE_SYSTEM_ERROR is public API.
	* gtk/src/icontheme.hg: Wrap GTK_ICON_THEME_ERROR as exception 
	instead of enum. Luckily, the enum was not used in the API anywhere 
	so nobody can be using it.
	* examples/book/: Added input example, based on code that was in the 
	tutorial inline. This needs to be updated properly - see TODO in the 
	code.
	* docs/tutorial/gtkmm-tut.xml: Some minor corrections to the 
	Idle/Timeout chapter, but it needs to be reviewed properly after we 
	have finished the example. Get the example from the source, instead of 
	pasting it inline.
	* gdk/src/pixbufloader.hg: Wrap size_prepared signal. I am not sure 
	why this was not wrapped in 2.4.