@@ -2799,9 +2799,9 @@ if(iter) //If anything is selected
 
 <para>
 For multiple-selection, you need to define a callback, and give it to
-selected_foreach(), like so:
+selected_foreach(), selected_foreach_path(), or selected_foreach_iter(), like so:
 <programlisting>
-refTreeSelection-&gt;selected_foreach( 
+refTreeSelection-&gt;selected_foreach_iter( 
     sigc::mem_fun(*this, &amp;TheClass::selected_row_callback) );
 
 ...
