@@ -1,4 +1,14 @@
-2004-11-24  Murray Cumming  <murrayc@localhost.localdomain>
+2004-11-25  Chris Vine  <cvine@freeserve.co.uk>
+
+	* example/book/input/: This now works.
+
+2004-11-25  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tut/gtkmm-tut.xml: TreeView selection: Use 
+	selected_foreach_iter() instead of selected_foreach(). Error 
+	found by Teus Benschop.
+
+2004-11-24  Murray Cumming  <murrayc@murrayc.com>
 
 	* demos/gtk-demo/: Added missing demo-common.[h|cc] files.
 	* gtk/src/treeview.hg, gdk/src/pixbuf.hg, : Removed extra ; and 
